Fixed spacing, added transitions

--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,18 @@
   width: 100%;
 }
 
+.left-container {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
 .right-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
+  flex: 1;
 }
 
 table {
@@ -112,6 +119,7 @@ th:first-child {
   display: flex;
   flex-direction: column;
   text-align: left;
+  
 }
 
 form {
@@ -119,13 +127,17 @@ form {
   flex-direction: column;
   gap: 10px;
   padding: 20px 0;
+  flex: 1;
 }
+
+
 
 form input {
   font-size: 20px;
   padding: 5px;
   border-radius: 5px;
   border: none;
+  flex: .5;
 }
 
 
@@ -206,21 +218,31 @@ td {
 
 #settings-popout {
   transition: all ease-in-out 250ms;
-  width: 150px;
-  flex: 0;
+  /* flex: 1; */
   position: relative;
+  margin: 0 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 #settings-popout form {
-  position: absolute;
   width: 150px;
   left: 0;
+  top: 50px;
   transition: all ease-in-out 250ms;
+  position: absolute
 }
 
 @media (max-width: 860px){
   #main-container {
     flex-direction: column;
+  }
+  form {
+    flex-direction: row;
+  }
+  
+  .settings-popout {
+    flex: 1;
   }
 }
 
